<resources>
    <string name="app_name">听说读写test</string>

    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="scan_scan">正在扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="console">操作控制台</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入绘制</string>
    <string name="memory_info">内存信息：</string>
    <string name="battery_memory">电量信息:</string>
    <string name="pen_status">笔是否按下：</string>
    <string name="page_addres">点阵地址：</string>
    <string name="forceNum">压力值：</string>
    <string name="coord_xy">坐标x/y：</string>
    <string name="clear_canvas">清空画布</string>
    <string name="get_pen_info">笔端信息</string>
    <string name="clear_cache">删除缓存</string>
    <string name="read_cache">读取缓存</string>
    <string name="get_sync_num">序列号</string>
    <string name="connect_status">连接状态：</string>


    <string name="internet_error">请检查手机网络状态</string>
    <string name="already_latest_version">当前笔端已经是最新版本</string>
    <string name="have_latest_version">笔端有最新版本发布，版本号:</string>
    <string name="download_unzip">1、下载解压缩</string>
    <string name="boot_restart">2、进入boot并重启</string>
    <string name="write_firmware">3、写入固件信息:</string>
    <string name="ota_pen_restart">4、笔端重启</string>
    <string name="ota_update_success">OTA升级成功</string>
    <string name="ota_update_failure">OTA升级失败</string>
    <string name="ota_reconnect_failure">进入boot并重连失败，请开关笔重新连接更新笔端版本</string>
    <string name="service_desc">service_descservice_descservice_descservice_desc</string>
    <string name="start_url">编辑网址</string>
    <string name="start_ans">开始答题</string>
    <string name="hide_url">请输入url地址，默认启动demo.html</string>
    <string name="dialog_title">连接智能笔</string>
    <string name="dialog_details">当前未连接智能笔。操作如下：\n1.打开智能笔的蓝牙（打开笔盖，按压笔尖，笔的指示灯绿灯常亮后即为打开）\n2.打开手机蓝牙（下拉页面状态栏点击【蓝牙】即可打开）\n3.点击下方【开始扫描】按钮查询智能笔 \n4.点击【连接】按钮进行连接（请检查智能笔笔身标注的SN码、MAC码，请勿错连）\n连接成功后智能笔蓝灯常亮，可开始答题啦</string>
    <string name="open_permission">开启权限</string>
    <string name="dialog2_title">当前尚未开启权限，无法使用相关功能</string>
    <string name="dialog2_details">打开【设置】->【应用与权限】->【权限管理】->【听说读写】，开启【位置信息】和【读写手机存储】的权限</string>
    <string name="bel_null">未扫描到蓝牙设备，请检查操作重新尝试</string>

</resources>
