<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

        <ImageView
            android:id="@+id/img_hold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/hold_40"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="注意事项：选择“删除缓存”可清空离线数据,选择“应用坐标”将绘制笔迹"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <org.delta.epen.view.MyProgress
                    android:id="@+id/pgsBar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:minHeight="18dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=" 上传进度："
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/connect_status" />

                <TextView
                    android:id="@+id/txt_connect_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/connected" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="time:" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/memory_info" />

                <TextView
                    android:id="@+id/txt_memory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text=" 0%" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/battery_memory" />

                <TextView
                    android:id="@+id/txt_battery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text=" 0%" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/pen_status" />

                <TextView
                    android:id="@+id/txt_write"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/page_addres" />

                <TextView
                    android:id="@+id/txt_paper_addres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="0.0.0.0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/forceNum" />

                <TextView
                    android:id="@+id/txt_force"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/coord_xy" />

                <TextView
                    android:id="@+id/txt_coordinate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="00/00" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_clear_canvas"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="@string/clear_canvas" />

            <Button
                android:id="@+id/btn_standard_hover_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="应用坐标" />

            <Button
                android:id="@+id/btn_pen_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="@string/get_pen_info" />

            <Button
                android:id="@+id/btn_read_memory_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="@string/read_cache"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_delete_memory_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="@string/clear_cache" />

            <Button
                android:id="@+id/btn_sync_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="@string/get_sync_num"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_close_stream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="获取时间" />

            <Button
                android:id="@+id/btn_disconnect_ble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="设置时间" />


            <Button
                android:id="@+id/btn_off_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="定时关机"
                android:visibility="gone" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_check_updata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="检查更新" />

            <Button
                android:id="@+id/btn_updata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_btn"
                android:text="更新版本" />

        </LinearLayout>
        <FrameLayout
            android:id="@+id/web_view_fragment"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent"
         />

    </RelativeLayout>
