<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="380dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/open_permission"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:background="@mipmap/ic_close" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:text="@string/dialog2_title"
            android:textSize="16sp">

        </TextView>

        <TextView
            android:id="@+id/tv_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="11dp"
            android:textColor="@color/black"
            android:text="@string/dialog2_details"
            android:textSize="16sp">

        </TextView>

    </RelativeLayout>
</LinearLayout>

