<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="380dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_title"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:id="@+id/tv_details"
            android:layout_below="@id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_details"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:id="@+id/btn_scan"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/black"
            android:background="@drawable/bg_btn"
            android:layout_below="@id/tv_details"
            android:text="@string/start_scan"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:layout_below="@+id/btn_scan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/ble_null"
                android:text="@string/bel_null"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <ListView
                android:id="@+id/list_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:divider="@color/colorPrimary"
                android:dividerHeight="1dp"
                android:scrollbars="none" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_alignParentEnd="true"
            android:layout_width="25dp"
            android:layout_marginTop="10dp"
            android:layout_height="25dp"
            android:background="@mipmap/ic_close"
            >

        </ImageView>
    </RelativeLayout>


</LinearLayout>